Sat May  3 09:35:26 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/orbconf.h:
	* tao/default_resource.cpp: Added a #if option to select lazy
	  resource strategy at compile time.

Fri May  2 12:01:45 2003  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          Check to make sure that the server is running before removing it.
          If it is running, reset the running information.

        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:

          Get the server information after reregistering the server before
          displaying it.

Fri May 02 17:03:49 2003  Simon McQueen  <sm@prismtechnologies.com>

        * orbsvcs/orbsvcs/CosNotification_Static.dsp:

          Added missing two missing IDL files and their resulting
          generated source to project and removed two others to make
          this project consistent with CosNotification.dsp.

        * TAOACE.dsw:
        * TAOACE_Static.dsw:

          Added a couple of missing dependencies.

Fri May 02 14:10:01 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tao/DynamicInterface/Request.cpp: Trimmed trailing spaces.

Fri May 02 05:51:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Quoter/Server.bor:
        * examples/Quoter/Factory_finder.bor:
        * examples/Quoter/Generic_factory.bor:
          Added IORTable to fix BCB6 Static link errors.

Thu May 01 21:55:00 UTC 2003  Gautam Thaker  <gthaker@atl.lmco.com>

        Please address all concerns regarding this commit
        to Jason Cohen <jcohen@atl.lmco.com>.  Thank you.

        * tao/corbafwd.h:

        Added profile tag for SCIOP = 0x54414f0EU
        Note that this is not an official tag , but has been permitted
        for the time being.  It may change in the future.

        * tao/orbconf.h:

        To enable SCIOP building, ACE_HAS_SCTP must be enabled by
        added sctp=openss7 to the gmake command line.